# AI-Assignment-Grader

./: check_direct_import.py  client.py  debug_imports.py  direct_import_output.txt  inspect_output.txt  inspect_tool.py  main.py  push_log.txt  pyproject.toml  server.py  test_imports.py  test_mcp_access.py  test_output.txt  testingai.py  verify_setup.py
